clusters/easy-platform/apps/lazycampus-site/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lazycampus-site
  labels:
    app.kubernetes.io/part-of: lazycampus-site
    pod-security.kubernetes.io/enforce: restricted
