clusters/easy-platform/apps/lazycampus-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazycampus-site
  namespace: lazycampus-site
spec:
  selector:
    app.kubernetes.io/name: lazycampus-site
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
